..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)
........S. [ZBX-5318] added remote commands in expanded {ESC.HISTORY} macro (Sasha)
A.F....... [ZBX-1357] added Chinese (Taiwan) translation; thanks to Zabbix translators (Richlv)
A.F....... [ZBX-1357] updated Chinese (China), Brazilian Portuguese, German, Japanese, Latvian, Spanish and Russian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5480] fixed icon default state for host elements in map (Eduard)
....I..... [ZBX-5479] removed inode item prototype from OS Windows template (Sasha)
........S. [ZBX-5235] fixed update of a "lifetime" field if link a template to a host (Sasha)
..F....... [ZBX-4025] fixed duplicate http step names cheking (Eduard)
.......PS. [ZBX-5240] fixed unwanted server shutdown if housekeeper cannot access MySQL database (Andris)
..F....... [ZBX-4482] fixed guest user theme not applied (Toms)