@@ -146,7 +146,7 @@ dnl check for DNS lookup functions
 found_resolv="no"
 LIBRESOLV_CHECK_CONFIG([no])
 if test "x$found_resolv" != "xyes"; then
-	AC_MSG_ERROR([Unable to DNS lookup functions "${found_resolv}"])
+	AC_MSG_ERROR([Unable to do DNS lookups (libresolv check failed)])
 fi
 LIBS="${LIBS} ${RESOLV_LIBS}"
 
@@ -166,7 +166,7 @@ case "${host_os}" in
 		;;
 esac
 
-if test "$largefile" = "yes"; then
+if test "x$largefile" = "xyes"; then
 	AC_SYS_LARGEFILE
 fi
 
@@ -835,13 +835,124 @@ AC_MSG_RESULT(no))
 
 dnl *****************************************************************
 dnl *                                                               *
+dnl *                 Checks for operating systems                  *
+dnl *                                                               *
+dnl *****************************************************************
+
+AC_MSG_CHECKING(for libperfstat 5.2.0.40 fileset)
+AC_TRY_COMPILE([#include <libperfstat.h>],
+[perfstat_memory_total_t	memstats;
+memstats.virt_active = 0;
+],
+AC_DEFINE(HAVE_AIXOSLEVEL_520004,1,[Define to 1 if libperfstat 5.2.0.40 fileset exists.])
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+AC_MSG_CHECKING(for libperfstat 5.3.0.60 fileset)
+AC_TRY_COMPILE([#include <libperfstat.h>],
+[perfstat_partition_total_t	lparstats;
+lparstats.type.b.donate_enabled = 0;
+lparstats.idle_donated_purr = 0;
+lparstats.busy_donated_purr = 0;
+lparstats.idle_stolen_purr = 0;
+lparstats.busy_stolen_purr = 0;
+],
+AC_DEFINE(HAVE_AIXOSLEVEL_530006,1,[Define to 1 if libperfstat 5.3.0.60 fileset exists.])
+AC_MSG_RESULT(yes),
+AC_MSG_RESULT(no))
+
+AC_MSG_CHECKING(for architecture)
+
+case "$host_os" in
+linux*)
+	ARCH="linux"
+	;;
+aix*)
+	ARCH="aix"
+	;;
+darwin*|rhapsody*)
+	ARCH="osx"
+	AC_DEFINE([MAC_OS_X], 1, [Define to 1 if you are using Mac OS X])
+	;;
+*solaris*)
+	ARCH="solaris"
+	;;
+hpux*)
+	ARCH="hpux"
+	;;
+freebsd*)
+	ARCH="freebsd"
+	;;
+netbsd*)
+	ARCH="netbsd"
+	;;
+osf*)
+	ARCH="osf"
+	;;
+openbsd*)
+	ARCH="openbsd"
+	;;
+*)
+	ARCH="unknown"
+	;;
+esac
+
+AC_MSG_RESULT([$ARCH ($host_os)])
+
+if test "x$ARCH" = "xlinux"; then
+	AC_MSG_CHECKING([for the linux kernel version])
+
+	kernel=`uname -r`
+
+	case "${kernel}" in
+		2.6.*)
+			AC_MSG_RESULT([2.6 family (${kernel})])
+			AC_DEFINE([KERNEL_2_6], 1, [Define to 1 if you are using Linux 2.6.x])
+			;;
+		2.4.*)
+			AC_MSG_RESULT([2.4 family (${kernel})])
+			AC_DEFINE([KERNEL_2_4], 1, [Define to 1 if you are using Linux 2.4.x])
+			;;
+		*)
+			AC_MSG_RESULT([unknown family (${kernel})])
+			;;
+	esac
+fi
+
+dnl Low Level Discovery needs a way to get the list of network
+dnl interfaces available on the monitored system. On HP-UX systems
+dnl that way depends on the OS version.
+if test "x$ARCH" = "xhpux"; then
+	hpux_version=${host_os#hpux}
+	hpux_major=${hpux_version%.*}
+	hpux_minor=${hpux_version#*.}
+
+	AC_DEFINE_UNQUOTED([HPUX_VERSION], $hpux_major$hpux_minor, [Define to HP-UX version])
+fi
+
+AC_DEFINE_UNQUOTED([ARCH], "${ARCH}", [Define to OS name for code managing])
+AC_SUBST(ARCH)
+
+dnl *****************************************************************
+dnl *                                                               *
 dnl *         Checks for options given on the command line          *
 dnl *                                                               *
 dnl *****************************************************************
 
 AC_ARG_ENABLE(static,[  --enable-static         Build statically linked binaries],
 [case "${enableval}" in
-  yes) LDFLAGS="${LDFLAGS} -static" ;;
+  yes)
+    LDFLAGS="${LDFLAGS} -static"
+    AC_MSG_CHECKING(if static linking is possible)
+    AC_LINK_IFELSE([AC_LANG_PROGRAM(,)],
+      [AC_MSG_RESULT([yes])
+        static_linking=yes],
+      [AC_MSG_RESULT([no])
+        static_linking=no])
+      if test "x$static_linking" = "xno"; then
+        AC_MSG_ERROR([static linking is not possible on this system])
+      fi
+    ;;
   no) ;;
   *) AC_MSG_ERROR([bad value ${enableval} for --enable-static]) ;;
 esac])
@@ -899,12 +1010,12 @@ have_ipmi="no"
 have_ipv6="no"
 have_ssh2="no"
 
-if test "$ipv6" = "yes"; then
+if test "x$ipv6" = "xyes"; then
 	AC_DEFINE(HAVE_IPV6,1,[Define to 1 if IPv6 should be enabled.])
 	have_ipv6="yes"
 fi
 
-if test "$server" = "yes" || test "$proxy" = "yes"; then
+if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 
 	have_multirow_insert="no"
 
@@ -1071,6 +1182,7 @@ if test "$server" = "yes" || test "$proxy" = "yes"; then
 	PROXY_LDFLAGS="$PROXY_LDFLAGS $LIBCURL_LDFLAGS"
 	PROXY_LIBS="$PROXY_LIBS $LIBCURL_LIBS"
 
+	dnl Starting from 2.0 agent can do web monitoring
 	AGENT_LDFLAGS="${AGENT_LDFLAGS} ${LIBCURL_LDFLAGS}"
 	AGENT_LIBS="${AGENT_LIBS} ${LIBCURL_LIBS}"
 
@@ -1191,7 +1303,7 @@ if test "$server" = "yes" || test "$proxy" = "yes"; then
 	PROXY_LIBS="$PROXY_LIBS $OPENIPMI_LIBS"
 fi
 
-if test "$java" = "yes"; then
+if test "x$java" = "xyes"; then
 	AC_CHECK_PROGS([JAVAC], [javac], [no])
 	if test "x$JAVAC" = "xno"; then
 		AC_MSG_ERROR([Unable to find "javac" executable in path])
@@ -1228,7 +1340,7 @@ found_iconv="no"
 dnl Check for libiconv [by default - skip]
 LIBICONV_CHECK_CONFIG([no])
 if test "x$found_iconv" != "xyes"; then
-	AC_MSG_ERROR([Unable to find iconv.h "${found_iconv}"])
+	AC_MSG_ERROR([Unable to use iconv (libiconv check failed)])
 fi
 CFLAGS="$CFLAGS $ICONV_CFLAGS"
 LDFLAGS="$LDFLAGS $ICONV_LDFLAGS"
@@ -1245,108 +1357,6 @@ AC_SUBST(PROXY_LIBS)
 
 AC_SUBST(AGENT_LDFLAGS)
 AC_SUBST(AGENT_LIBS)
-
-dnl *****************************************************************
-dnl *                                                               *
-dnl *                 Checks for operating systems                  *
-dnl *                                                               *
-dnl *****************************************************************
-
-AC_MSG_CHECKING(for libperfstat 5.2.0.40 fileset)
-AC_TRY_COMPILE([#include <libperfstat.h>],
-[perfstat_memory_total_t	memstats;
-memstats.virt_active = 0;
-],
-AC_DEFINE(HAVE_AIXOSLEVEL_520004,1,[Define to 1 if libperfstat 5.2.0.40 fileset exists.])
-AC_MSG_RESULT(yes),
-AC_MSG_RESULT(no))
-
-AC_MSG_CHECKING(for libperfstat 5.3.0.60 fileset)
-AC_TRY_COMPILE([#include <libperfstat.h>],
-[perfstat_partition_total_t	lparstats;
-lparstats.type.b.donate_enabled = 0;
-lparstats.idle_donated_purr = 0;
-lparstats.busy_donated_purr = 0;
-lparstats.idle_stolen_purr = 0;
-lparstats.busy_stolen_purr = 0;
-],
-AC_DEFINE(HAVE_AIXOSLEVEL_530006,1,[Define to 1 if libperfstat 5.3.0.60 fileset exists.])
-AC_MSG_RESULT(yes),
-AC_MSG_RESULT(no))
-
-AC_MSG_CHECKING(for architecture)
-
-case "$host_os" in
-linux*)
-	ARCH="linux"
-
-	AC_MSG_RESULT([ok (${host_os})])
-
-	AC_MSG_CHECKING([for the kernel version])
-
-        kernel=`uname -r`
-
-        case "${kernel}" in
-             2.6.*)
-        	    AC_MSG_RESULT([2.6 family (${kernel})])
-        	    AC_DEFINE([KERNEL_2_6], 1, [Define to 1 if you are using Linux 2.6.x])
-        	    ;;
-             2.4.*)
-        	    AC_MSG_RESULT([2.4 family (${kernel})])
-        	    AC_DEFINE([KERNEL_2_4], 1, [Define to 1 if you are using Linux 2.4.x])
-        	    ;;
-        esac
-;;
-aix*)
-	ARCH="aix"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-darwin*|rhapsody*)
-	ARCH="osx"
-
-	AC_MSG_RESULT([ok (${host_os})])
-	AC_DEFINE([MAC_OS_X], 1, [Define to 1 if you are using Mac OS X])
-;;
-*solaris*)
-	ARCH="solaris"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-hpux*)
-	ARCH="hpux"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-freebsd*)
-	ARCH="freebsd"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-netbsd*)
-	ARCH="netbsd"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-osf*)
-	ARCH="osf"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-openbsd*)
-	ARCH="openbsd"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-*)
-	ARCH="unknown"
-
-	AC_MSG_RESULT([ok (${host_os})])
-;;
-esac
-
-AC_DEFINE_UNQUOTED([ARCH], "${ARCH}", [Define to OS name for code managing])
-AC_SUBST(ARCH)
 
 dnl *****************************************************************
 dnl *                                                               *
