@@ -30,7 +30,7 @@ typedef struct zbx_alias
 }
 ALIAS;
 
-int	add_alias(const char *name, const char *value);
+void	add_alias(const char *name, const char *value);
 void	alias_list_free();
 void	alias_expand(const char *orig, char *expanded, size_t exp_buf_len);
 
