@@ -15,6 +15,7 @@ Bug fixes:
 Changes for 2.0.3rc1
 
 New features:
+...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
 ........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
 A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
 A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
